add calendar view

--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -10,6 +10,7 @@
 
     <com.example.androidmark.event.ViewGroup02
         android:layout_width="300dp"
+        android:visibility="invisible"
         android:layout_height="500dp"
         android:background="#0f0">
 
